fixed distorted logos

--- a/angular_app_frontend/features/dashboard/selected-show/select.scss
+++ b/angular_app_frontend/features/dashboard/selected-show/select.scss
@@ -90,10 +90,7 @@ show-detail {
       margin-top: 10px;
       margin-bottom: 10px;
     }
-    .window-service {
-      display: inline-flex;
-      height: 60px;
-    }
+    
     div {
       object-fit: contain;
       margin-bottom: 3%;
