--- a/static/main.css
+++ b/static/main.css
@@ -3085,9 +3085,6 @@ show-detail {
     show-detail .service-options .window-label {
       margin-top: 10px;
       margin-bottom: 10px; }
-    show-detail .service-options .window-service {
-      display: inline-flex;
-      height: 60px; }
     show-detail .service-options div {
       object-fit: contain;
       margin-bottom: 3%;
